...
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
                    android:text="Device Model: "
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="19dp"
                    android:backgroundTint="#00458B"
                    android:text="@string/cancel"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">


                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#00458B"
                    android:text="RESET"
...
                     android:inputType="text"
                     android:visibility="gone"
                     tools:layout_editor_absoluteX="100dp"
                     tools:layout_editor_absoluteY="188dp" />-->

                <EditText
                    android:id="@+id/name"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="38dp"
                    android:gravity="center_vertical"
                    android:hint="Enter your name"
...
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/editBtn"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#00458B"
                    android:text="Edit"
...
