<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleType="fitStart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_dark_blue" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGNUP"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintBottom_toTopOf="@id/blueConstraintLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blueConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/signupTitle"
        android:background="#99DDFF"
       >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Please fill the details below to complete SignUp."
            android:textColor="#26252C"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:hint="Name*"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="90dp"
            android:textColor="@color/black"
            android:hint="Password*"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_password_again"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:hint="Confirm Password*"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="325dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:hint="Email*"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:alpha="0.4"
            android:textColor="@color/black"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:tag="Gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"></Spinner>

        <TextView
            android:id="@+id/text_spinner_gender"
            android:layout_width="101dp"
            android:layout_height="38dp"
            android:layout_marginTop="28dp"
            android:text="Gender*"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_password"
            app:layout_constraintStart_toStartOf="@+id/edit_email"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="223dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/button"
            android:fontFamily="sans-serif"
            android:text="SIGNUP"
            android:textColor="@color/buttonText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_again" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="12dp"
            android:text="Already a user?"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.441" />

        <Button
            android:id="@+id/btn_goto_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="12dp"
            android:text="LOGIN"
            android:textColor="@color/borderlessButtonText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.363" />





    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/bottom_dark_blue" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></androidx.core.widget.ContentLoadingProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>