<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00458B"
    android:paddingStart="45dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:alpha="0.9"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_sensor_type_name"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Group"
            android:textColor="@color/white"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/iv_sensor_type_info"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/info1"></ImageView>
    </RelativeLayout>

</LinearLayout>